[package]
name = "tokio-periodic"
version = "0.1.0"
authors = ["Simonas Kazlauskas <git@kazlauskas.me>"]

[dependencies]
futures = "0.1"
tokio-core="0.1.3"
mio = "0.6"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[replace]
"mio:0.6.4" = {path = "./mio"}
