[package]
name = "tokio-periodic"
version = "0.1.1"
authors = ["Simonas Kazlauskas <git@kazlauskas.me>"]
description = "Cross-platform, mostly-0-cost asynchronous periodic timers"
license = "ISC"
repository = "https://github.com/nagisa/tokio-periodic"
documentation = "https://docs.rs/tokio-periodic/"

[dependencies]
futures = "0.1"
tokio-core="0.1"
mio = "^0.6.5"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
